k8s/base/front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:5173, https://newstock.info"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Authorization, Content-Type"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - newstock.info
      secretName: tls-secret   # 앞서 생성한 시크릿 이름
  ingressClassName: nginx
  rules:
    - host: newstock.info
      http:
        paths:
          - path: /api/auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: newstock-stock-auth-service
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: newstock-stock-frontend-service
                port:
                  number: 3000

          - path: /api/stock(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: newstock-stock-stock-service
                port:
                  number: 8003
          - path: /api/news(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: newstock-stock-news-service
                port:
                  number: 8002
          - path: /api/member/websocket
            pathType: Prefix
            backend:
              service:
                name: newstock-stock-member-service
                port:
                  number: 8001
