k8s/base/socket-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: socket-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-set-headers: |
      Upgrade $http_upgrade;
      Connection "upgrade";
spec:
  ingressClassName: nginx
  rules:
  - host: newstock.info
    http:
      paths:
      - path: /api/member/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: newstock-stock-member-service
            port:
              number: 8001
      - path: /api/stock/websocket
        pathType: ImplementationSpecific
        backend:
          service:
            name: newstock-stock-stock-service
            port:
              number: 8003
